--- a/.gitignore
+++ b/.gitignore
@@ -215,6 +215,7 @@ pip-log.txt
 #Mr Developer
 .mr.developer.cfg
 
-data/HeV_buffer screen SEC_Pearce_020514 -  Melt Curve RFU Results.xls
 
+
+#SPECIFIC TO US
 error_log.txt
