restructure getting there

--- a/settings.ini
+++ b/settings.ini
@@ -7,4 +7,4 @@ DeleteInputFiles = False
 [Extra Output]
 
 ;set this to true if you wish to have a new data file created with the normalised curves' data
-ProduceNormalisedData = False
+ProduceNormalisedData = True
