first output working

--- a/settings.ini
+++ b/settings.ini
@@ -5,7 +5,10 @@
 DeleteInputFiles = False
 
 ;set to false if you do not wish for meltdown to check for newer versions when it is run
-CheckForNewVersion = True
+CheckForNewVersion = False
+
+;The maximum number of melt temperatures Meltdown will look for on a single condition
+MaxTmsPerCurve = 2
 
 
 [Extra Output]
