Started work on supporting having umltiple protein as supplieds (uses condition variable 2 to group them, as youd exepect)

--- a/settings.ini
+++ b/settings.ini
@@ -5,7 +5,7 @@
 DeleteInputFiles = False
 
 ;set to false if you do not wish for meltdown to check for newer versions when it is run
-CheckForNewVersion = True
+CheckForNewVersion = False
 
 
 [Extra Output]
