Reverse removed tm changes

--- a/settings.ini
+++ b/settings.ini
@@ -7,7 +7,11 @@ DeleteInputFiles = False
 ;set to false if you do not wish for meltdown to check for newer versions when it is run
 CheckForNewVersion = True
 
+
 [Extra Output]
 
 ;set this to true if you wish to have a new data file created with the normalised curves' data
 ProduceNormalisedData = False
+
+;set this to true if you wish to have a new data file containing the calculated tms
+ProduceTmData = False
